crates/memscribe-testkit/tests/snapshots/nodes__vscode__v1__ban.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "vsc-sess-3",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "We will never add a dependency on left-pad. Roll our own padding helper.",
    "markers": [
      {
        "rule_id": "ban.negated_use",
        "category": "ban",
        "matched_text": "never add",
        "offset": 8
      },
      {
        "rule_id": "imperative.must_always_never",
        "category": "imperative",
        "matched_text": "never",
        "offset": 8
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/vscode/v1/ban.jsonl",
        "byte_offset": 166,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "We will never add a dependency on left-pad.",
    "considered_options": [],
    "is_ban": true,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "observed"
  },
  {
    "node": "episode",
    "path": "src/util/pad.ts",
    "diff": {
      "path": "src/util/pad.ts",
      "old": null,
      "new": "export const pad = (s, n) => s.padStart(n, '0');",
      "unified": null,
      "added_lines": 1,
      "removed_lines": 0
    },
    "git": {
      "sha": "0011223344556677",
      "branch": "main"
    },
    "episode_id": "954d592eada689aae0fc35bb3a3f90af3683538ddf8702df0217ad551780c6cb"
  },
  {
    "node": "binding",
    "from": "decision:vsc-sess-3:1",
    "to": "episode:954d592eada689aae0fc35bb3a3f90af3683538ddf8702df0217ad551780c6cb",
    "relation": "produced",
    "prov": {
      "used_session": "vsc-sess-3",
      "used_decision": "decision:vsc-sess-3:1",
      "was_generated_by_session": "vsc-sess-3",
      "t_use": "2026-06-22T12:00:00Z",
      "t_gen": "2026-06-22T12:00:06Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": null
  }
]
