crates/memscribe-testkit/tests/snapshots/nodes__vscode__v1__happy_path_decision_then_edits.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "vsc-sess-1",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "Let's use Postgres instead of MySQL for the persistence layer.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "use",
        "offset": 6
      },
      {
        "rule_id": "rejection.instead_of",
        "category": "rejection",
        "matched_text": "instead of",
        "offset": 19
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/vscode/v1/happy_path_decision_then_edits.jsonl",
        "byte_offset": 162,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Let's use Postgres instead of MySQL for the persistence layer.",
    "considered_options": [
      {
        "text": "MySQL",
        "chosen": false
      },
      {
        "text": "Postgres",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "observed"
  },
  {
    "node": "episode",
    "path": "src/db/connect.ts",
    "diff": {
      "path": "src/db/connect.ts",
      "old": "const url = 'mysql://localhost/acme';",
      "new": "const url = 'postgres://localhost/acme';",
      "unified": null,
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "a1b2c3d4e5f6",
      "branch": "main"
    },
    "episode_id": "09c96e7aa322489f38c27c0c54d017ea7879c80cf061d0b6febc26c500e546a6"
  },
  {
    "node": "episode",
    "path": "src/db/schema.sql",
    "diff": {
      "path": "src/db/schema.sql",
      "old": "ENGINE=InnoDB",
      "new": "-- postgres has no storage engines",
      "unified": "@@ -1 +1 @@\n-ENGINE=InnoDB\n+-- postgres has no storage engines",
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "a1b2c3d4e5f6",
      "branch": "main"
    },
    "episode_id": "ed82ab347d94a38a8d9fb9b6dff2f38b09331bb4552153dd86a750e7281b0df8"
  },
  {
    "node": "binding",
    "from": "decision:vsc-sess-1:1",
    "to": "episode:09c96e7aa322489f38c27c0c54d017ea7879c80cf061d0b6febc26c500e546a6",
    "relation": "produced",
    "prov": {
      "used_session": "vsc-sess-1",
      "used_decision": "decision:vsc-sess-1:1",
      "was_generated_by_session": "vsc-sess-1",
      "t_use": "2026-06-22T10:00:00Z",
      "t_gen": "2026-06-22T10:00:05Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.5,
      "confidence": 0.5,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  },
  {
    "node": "binding",
    "from": "decision:vsc-sess-1:1",
    "to": "episode:ed82ab347d94a38a8d9fb9b6dff2f38b09331bb4552153dd86a750e7281b0df8",
    "relation": "produced",
    "prov": {
      "used_session": "vsc-sess-1",
      "used_decision": "decision:vsc-sess-1:1",
      "was_generated_by_session": "vsc-sess-1",
      "t_use": "2026-06-22T10:00:00Z",
      "t_gen": "2026-06-22T10:00:05Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.5,
      "confidence": 0.5,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  }
]
