crates/memscribe-testkit/tests/snapshots/nodes__vscode__v1__interleaved_arcs.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "vsc-sess-int",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "Let's use JWT for session auth. Wire it into the auth module and the middleware.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "use",
        "offset": 6
      },
      {
        "rule_id": "decision_verb.polite_select",
        "category": "decision_verb",
        "matched_text": "Let's use",
        "offset": 0
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/vscode/v1/interleaved_arcs.jsonl",
        "byte_offset": 179,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Let's use JWT for session auth.",
    "considered_options": [
      {
        "text": "JWT",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "observed"
  },
  {
    "node": "episode",
    "path": "src/auth/token.ts",
    "diff": {
      "path": "src/auth/token.ts",
      "old": "// session cookie",
      "new": "export function signJwt(claims) { /* ... */ }",
      "unified": "@@ -1 +1,3 @@\n-// session cookie\n+export function signJwt(claims) { /* ... */ }",
      "added_lines": 3,
      "removed_lines": 1
    },
    "git": {
      "sha": "aa11bb22cc33dd44",
      "branch": "feat/auth-pivot"
    },
    "episode_id": "7a88b1a43b51e094fdd6dea0ca1bd06ead8293c0b11b1571b03cc63c5c3f743c"
  },
  {
    "node": "episode",
    "path": "src/middleware/auth.ts",
    "diff": {
      "path": "src/middleware/auth.ts",
      "old": "req.session",
      "new": "verifyJwt(req.headers.authorization)",
      "unified": null,
      "added_lines": 2,
      "removed_lines": 1
    },
    "git": {
      "sha": "aa11bb22cc33dd44",
      "branch": "feat/auth-pivot"
    },
    "episode_id": "16b5aba4fbadcc373776446aa09792329871994e4360d0e133f66d471254f525"
  },
  {
    "node": "conversation",
    "session_id": "vsc-sess-int",
    "turn_range": {
      "start": 8,
      "end": 9
    },
    "text": "Now let's use argon2 for password hashing. Update the auth module and the user model.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "use",
        "offset": 10
      },
      {
        "rule_id": "decision_verb.polite_select",
        "category": "decision_verb",
        "matched_text": "let's use",
        "offset": 4
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/vscode/v1/interleaved_arcs.jsonl",
        "byte_offset": 1379,
        "line_no": 5
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Now let's use argon2 for password hashing.",
    "considered_options": [
      {
        "text": "argon2",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 8,
      "end": 9
    },
    "fact_status": "observed"
  },
  {
    "node": "episode",
    "path": "src/auth/token.ts",
    "diff": {
      "path": "src/auth/token.ts",
      "old": "import bcrypt from 'bcrypt';",
      "new": "import argon2 from 'argon2';",
      "unified": null,
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "aa11bb22cc33dd44",
      "branch": "feat/auth-pivot"
    },
    "episode_id": "a0a3eb6f0047cf200e87a0f61df2ce203e4d1b384047291358d7b7c554d18cf7"
  },
  {
    "node": "episode",
    "path": "src/models/user.ts",
    "diff": {
      "path": "src/models/user.ts",
      "old": "bcrypt.hash(pw, 10)",
      "new": "argon2.hash(pw)",
      "unified": null,
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "aa11bb22cc33dd44",
      "branch": "feat/auth-pivot"
    },
    "episode_id": "0cf59ba97497c478d4823cd6b015a8ab13d87afa6cfa0f8abb4aa864102f1bb8"
  },
  {
    "node": "binding",
    "from": "decision:vsc-sess-int:1",
    "to": "episode:16b5aba4fbadcc373776446aa09792329871994e4360d0e133f66d471254f525",
    "relation": "produced",
    "prov": {
      "used_session": "vsc-sess-int",
      "used_decision": "decision:vsc-sess-int:1",
      "was_generated_by_session": "vsc-sess-int",
      "t_use": "2026-06-22T14:00:00Z",
      "t_gen": "2026-06-22T14:00:12Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.25,
      "confidence": 0.5,
      "lift": 2.0,
      "phi": 0.57735,
      "p": 0.248213
    }
  },
  {
    "node": "binding",
    "from": "decision:vsc-sess-int:1",
    "to": "episode:7a88b1a43b51e094fdd6dea0ca1bd06ead8293c0b11b1571b03cc63c5c3f743c",
    "relation": "produced",
    "prov": {
      "used_session": "vsc-sess-int",
      "used_decision": "decision:vsc-sess-int:1",
      "was_generated_by_session": "vsc-sess-int",
      "t_use": "2026-06-22T14:00:00Z",
      "t_gen": "2026-06-22T14:00:06Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.25,
      "confidence": 0.5,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  },
  {
    "node": "binding",
    "from": "decision:vsc-sess-int:8",
    "to": "episode:0cf59ba97497c478d4823cd6b015a8ab13d87afa6cfa0f8abb4aa864102f1bb8",
    "relation": "produced",
    "prov": {
      "used_session": "vsc-sess-int",
      "used_decision": "decision:vsc-sess-int:8",
      "was_generated_by_session": "vsc-sess-int",
      "t_use": "2026-06-22T14:01:00Z",
      "t_gen": "2026-06-22T14:01:13Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.25,
      "confidence": 0.5,
      "lift": 2.0,
      "phi": 0.57735,
      "p": 0.248213
    }
  },
  {
    "node": "binding",
    "from": "decision:vsc-sess-int:8",
    "to": "episode:a0a3eb6f0047cf200e87a0f61df2ce203e4d1b384047291358d7b7c554d18cf7",
    "relation": "produced",
    "prov": {
      "used_session": "vsc-sess-int",
      "used_decision": "decision:vsc-sess-int:8",
      "was_generated_by_session": "vsc-sess-int",
      "t_use": "2026-06-22T14:01:00Z",
      "t_gen": "2026-06-22T14:01:07Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.25,
      "confidence": 0.5,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  }
]
