crates/memscribe-testkit/tests/snapshots/nodes__vscode__v1__rejected_alternative.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "vsc-sess-2",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "Should we use Redis or just an in-memory LRU for the cache?",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "use",
        "offset": 10
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/vscode/v1/rejected_alternative.jsonl",
        "byte_offset": 168,
        "line_no": 2
      }
    ]
  },
  {
    "node": "episode",
    "path": "src/cache/lru.ts",
    "diff": {
      "path": "src/cache/lru.ts",
      "old": null,
      "new": "export class Lru { /* ... */ }",
      "unified": null,
      "added_lines": 1,
      "removed_lines": 0
    },
    "git": {
      "sha": "f6e5d4c3b2a1",
      "branch": "feat/cache"
    },
    "episode_id": "e3bb2d813ca36317fb2f39829afcdb865d3fa6e9d679bfd90d5c24e012bc4075"
  }
]
